# azure-threat-lens

./: .env.example  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
config/: default.yaml
src/azure_threat_lens/analysis/: __init__.py  entity.py  identity.py  triage.py  triage_engine.py
src/azure_threat_lens/cli/: __init__.py  main.py  output.py
src/azure_threat_lens/config/: __init__.py  settings.py
src/azure_threat_lens/integrations/: __init__.py
src/azure_threat_lens/integrations/azure/: __init__.py  base.py  defender.py  graph.py  resource_graph.py  sentinel.py
src/azure_threat_lens/integrations/threat_intel/: __init__.py  abuseipdb.py  base.py  enricher.py  greynoise.py  virustotal.py
src/azure_threat_lens/llm/: __init__.py  reasoning.py
src/azure_threat_lens/logging/: __init__.py  setup.py
src/azure_threat_lens/models/: __init__.py  entity.py  identity.py  incident.py
tests/: conftest.py
tests/new_unit/: test_threatlens_pipeline.py
tests/unit/: test_analysis_identity.py  test_analysis_triage.py  test_breach_manager_engine.py  test_cli_setup.py  test_config.py  test_models.py  test_remediation_engine.py  test_threat_intel.py  test_threatlens_cli.py  test_triage_engine.py
threatlens/: __init__.py
threatlens/analysis/: identity_abuse.py  privilege_escalation.py  resource_access_analysis.py  token_abuse.py
threatlens/azure/: __init__.py  _base.py  activity_log_client.py  defender_client.py  graph_client.py  resource_graph_client.py  sentinel_client.py
threatlens/cli/: commands.py  main.py
threatlens/core/: breach_manager_engine.py  breach_skill_registry.py  investigation_engine.py  remediation_engine.py  triage_engine.py  verdict_engine.py
threatlens/entities/: __init__.py  azure_resource_resolver.py  entity_resolver.py  identity_resolver.py  network_resolver.py
threatlens/intel/: __init__.py  _base.py  abuseipdb_client.py  enricher.py  greynoise_client.py  virustotal_client.py
threatlens/models/: __init__.py  breach_manager.py  entities.py  incidents.py  investigations.py  remediation.py
threatlens/reasoning/: llm_engine.py  prompt_templates.py
threatlens/storage/: cache.py  evidence_store.py
threatlens/utils/: __init__.py  auth.py  config.py  logging.py
