[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "azure-threat-lens"
version = "0.2.0"
description = "Production-quality Python security investigation tool for Microsoft Sentinel and Azure"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Azure Threat Lens Contributors" }]

dependencies = [
    "typer>=0.12",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "anyio>=4.3",
    "python-dotenv>=1.0",
    "azure-identity>=1.16",
    "msal>=1.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.9",
]

[project.scripts]
threatlens = "threatlens.cli.main:main"
atl = "azure_threat_lens.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/azure_threat_lens", "threatlens"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/threatlens", "/tests", "README.md", "pyproject.toml", ".env.example", "LICENSE"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
